--- a/comcastHealthCareHospitalSystemGIUIFrameWork/pom.xml
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/pom.xml
@@ -5,6 +5,61 @@
 	<groupId>comcastHealthCareHospitalSystemGIUIFrameWork</groupId>
 	<artifactId>comcastHealthCareHospitalSystemGIUIFrameWork</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<profiles>
+	<profile>
+	<id>FR</id>
+	<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Suite_FullReg.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	<profile>
+	<id>SM</id>
+	<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Suite_Smoke.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	<profile>
+	<id>RR</id>
+	<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Suite_regionalREg.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	
+	</profiles>
 	<dependencies>
 		<!--
 		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
