--- a/comcastHealthCareHospitalSystemGIUIFrameWork/pom.xml
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/pom.xml
@@ -58,6 +58,41 @@
 			</plugins>
 		</build>
 	</profile>
+	<profile>
+	<id>ST</id>
+	<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Suite_System.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	<profile>
+	<id>IN</id>
+	<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Suite_integration.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	
 	
 	</profiles>
 	<dependencies>
